--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -156,7 +156,7 @@
       <div class="project-header">
         <h1>
           Digital Restoration Short-Film La Cruz de Mayo
-          <span>Mechanical Gestures to Preserve Flowers:<br>An essay on color reproduction using contact duplication systems</span>
+          <span></span>
         </h1>
         <div class="project-meta">
           <span>Digital Film Restoration | research project</span>
