--- a/about.html
+++ b/about.html
@@ -401,9 +401,8 @@ li a:hover .desc{
 ======================= */
 
 .presentation-photos{
-   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 14px;
+  columns: 3;
+  column-gap: 0.5rem;
 }
 .presentation-item figcaption{
   font-size: .85rem;
