--- a/about.html
+++ b/about.html
@@ -608,7 +608,7 @@ li a:hover .desc{
 
    <figure class="presentation-item">
     <img src="QECinemateca.jpeg" alt="Panel discussion at audiovisual archiving conference">
-    <figcaption>Panel discussion in Cinemateca Portuguesa About the Portuguese Experimental Artist Ernesto de Sousa </figcaption>
+    <figcaption> discussion at Cinemateca Portuguesa </figcaption>
    </figure>
 
    <figure class="presentation-item">
