--- a/index.html
+++ b/index.html
@@ -523,9 +523,12 @@
     justify-content: center;
   }
 }
+
 .project-image {
+  margin-top: 80px;
   columns: 3;
   column-gap: 0.5rem;
+
 }
 
 .project-image img,
@@ -632,6 +635,7 @@
       </div>
     </div>
   </div>
+
  <div class="project-image container">
   <a href="portfolio.html">
     <img src="Send me a color/Captura de ecrã 2025-12-19 173446.png" alt="Projeto">
@@ -656,7 +660,7 @@
   <a href="portfolio.html">
     <img src="Send me a color/Prueva de color.jpeg" alt="Projeto">
   </a>
-  
+
 </section>
   </main>
 </body>
