--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
   </div>
 
  <div class="project-image container">
-  <a href="portfolio.html">
+  <a href="artistic-works.html">
     <img src="Send me a color/Captura de ecrã 2025-12-19 173446.png" alt="Projeto">
   </a>
 
