--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
     <img src="Send me a color/Captura de ecrã 2025-12-19 173446.png" alt="Projeto">
   </a>
 
-  <a href="portfolio.html">
+  <a href="research-preservation.html">
     <img src="Send me a color/Untitled_1.1.20.jpg" alt="Projeto">
   </a>
 
