--- a/about.html
+++ b/about.html
@@ -281,7 +281,11 @@ html lang="en">
 ======================= */
 
 .about-associations{
+  display: flex;
+  justify-content: flex-start; /* eixo horizontal */
+  align-items: center;         /* eixo vertical (opcional) */
   text-align: center;
+
 }
 
 .about-section-title{
