--- a/about.html
+++ b/about.html
@@ -281,8 +281,8 @@ html lang="en">
 ======================= */
 
 .about-associations{
-  display: flex;
-  justify-content: flex-start; /* eixo horizontal */
+  display: flex-start;
+  justify-content: center; /* eixo horizontal */
   align-items: center;         /* eixo vertical (opcional) */
   text-align: center;
 
