--- a/about.html
+++ b/about.html
@@ -301,12 +301,12 @@ html lang="en">
   margin: 0 auto;
   max-width: 560px;
 
-  display: flex;
+  display: flex-start;
   flex-direction: column;
 }
 
 .associations-list li{
-  display: flex;
+  display: flex-start;
   flex-direction: column;
   gap: 20px;
 }
