--- a/about.html
+++ b/about.html
@@ -280,7 +280,7 @@ html lang="en">
 ======================= */
 
 .about-associations{
-  display: flex;
+  display: row;
   justify-content: center;
   text-align: center;
   margin-top: 3rem;
