--- a/about.html
+++ b/about.html
@@ -282,7 +282,7 @@ html lang="en">
 .about-associations{
   display: row;
   justify-content: center;
-  text-align: center;
+  text-align: flex-start;
   margin-top: 3rem;
 }
 
