--- a/about.html
+++ b/about.html
@@ -281,7 +281,7 @@ html lang="en">
 
 .about-associations{
   display: row;
-  justify-content: center;
+  justify-content: flex-start;
   text-align: center;
   margin-top: 3rem;
 }
