--- a/about.html
+++ b/about.html
@@ -289,6 +289,7 @@ html lang="en">
 .associations-inner{
   max-width: 560px; /* igual ao texto acima */
   width: 100%;
+
 }
 
 .about-section-title{
@@ -298,6 +299,7 @@ html lang="en">
   text-transform: uppercase;
   color: var(--muted2);
   margin-bottom: 2rem;
+  padding right: 10px;
 }
 
 .associations-list{
