--- a/research-preservation.html
+++ b/research-preservation.html
@@ -330,6 +330,90 @@
     <img src="research preservation/Untitled_1.30.2.jpg" alt="Projeto">
   </div>
 </section>
+
+<section class="project-layout2">
+  <div class="project-wrapper container2">
+    <!-- COLUNA TEXTO -->
+    <div class="project-text2">
+      <div class="project-header2">
+        <h1>
+          Digital Restoration<br> Short-Film La Cruz de Mayo
+        </h1>
+        <div class="project-meta2">
+          <span>Digital Film Restoration | research project</span>
+          <span>16mm film | 22min</span>
+          <span class="year2">1978</span>
+        </div>
+      </div>
+
+      <div class="project-block2">
+        <p><strong>Director</strong><br>Miguel Secades y Miguel García</p>
+        <p><strong>País de producción</strong><br>Cuba</p>
+      </div>
+
+      <div class="project-block2">
+        <p><strong> Archive Colletion</strong></p>
+        <p>
+          Archivistas Selvages Collective<br>
+          In colaboration With<br>
+          Elias Querjeta Zine Eskola (spain) <br>
+        </p>
+      </div>
+
+      <div class="project-block2">
+        <p>
+          Production: Archivistas Selvages Collective<br>
+          Post producion Cordination: Lucia Malandro <br>
+          Digital Image Restoration: Mariana Torres<br>
+          Color grading: Mariana Torres & Lourenço Pinheiro<br>
+         Sound Restoration: Franco Bosco<br>
+        
+        </p>
+      </div>
+      <div class="project-block presentations2">
+        <p><strong>Presentations</strong></p>
+        <p>
+          <em>Cineteca de Madrid -Matadero-2024<br>
+            Focus Short films dedicated to Cuban amateur cinema.</em>
+          </p>
+      </div>
+
+      <div class="project-block synopsis2">
+        <p><strong>Sinopsis</strong></p>
+        <p>
+          <em>La Cruz de Mayo (1983) It is one significant recoveries<br>
+             in the context of Cuban amateur cinema, as it is a short <br>
+             film about religious practices in a country politically <br>
+             assumed to be atheist, where any expression of religious<br>
+              belief is censored.<br>
+              
+            the Archivistas Selvajes Collective has located and rescued<br>
+            230 of the 546 films reported to them, originating from 17<br>
+            creative cineclubs or independent collectives among the 84<br>
+            registered with the National Federation of Cineclubs (FNCC)<br>
+            before 1994. This work reflects a deep commitment to preserving <br>
+            cultural and historical records vital to Cuba’s identity, despite<br>
+            the lack of institutional support.</em>
+        </p>
+      </div>
+    </div>
+    <!-- COLUNA VÍDEO -->
+    <div class="video-fixed">
+  <iframe
+    src="https://player.vimeo.com/video/1084541446?h=b19ced0966"
+    width="640"
+    height="360"
+    frameborder="0"
+    allow="autoplay; fullscreen; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+ </div>
+
+  <!-- IMAGEM ABAIXO -->
+  <div class="project-image container2">
+    <img src="research preservation/Untitled_1.30.2.jpg" alt="Projeto">
+  </div>
+</section>
 </main>
 
 </body>
