--- a/about.html
+++ b/about.html
@@ -289,6 +289,8 @@ html lang="en">
 .associations-inner{
   max-width: 560px; /* igual ao texto acima */
   width: 100%;
+    justify-content: flex-start;
+  text-align: center;
 
 }
 
