--- a/about.html
+++ b/about.html
@@ -416,10 +416,13 @@ li a:hover .desc{
   column-gap: 0.5rem;
 }
 .presentation-item figcaption{
-  font-size: .85rem;
-  color: #555;
-  margin-top: 4px;
-  line-height: 1.3;
+  width: 100%;
+  margin-bottom: 1.2rem;
+  break-inside: avoid;
+  filter: brightness(80%) contrast(115%);
+  display: block;
+  object-fit: cover;
+  cursor: pointer;
 }
 .presentation-photos img{
  width: 100%;
@@ -617,22 +620,22 @@ li a:hover .desc{
 
    <figure class="presentation-item">
     <img src="4370eb11-5f9f-4504-aa5a-6e833e0a2735.jpg" alt="Conference presentation at EYE Museum">
-    <figcaption>Eye International Conference 2025- Panel Experimental Colour Practices </figcaption>
+    <figcaption>Eye International Conference 2025 </figcaption>
    </figure>
 
    <figure class="presentation-item">
     <img src="QECinemateca.jpeg" alt="Panel discussion at audiovisual archiving conference">
-    <figcaption> discussion at Cinemateca Portuguesa </figcaption>
+    <figcaption> portuguese experimental artist program- Cinemateca Portuguesa 2025 </figcaption>
    </figure>
 
    <figure class="presentation-item">
     <img src="C3presentation.jpeg" alt="Lecture moment during academic conference">
-    <figcaption>C3 research Group at EQZE — research presentation</figcaption>
+    <figcaption>C3 research Group</figcaption>
    </figure>
 
       <figure class="presentation-item">
     <img src="presentationsmc.jpg" alt="Lecture moment during academic conference">
-    <figcaption>Projectors in the Theather — Master Thesis presentation</figcaption>
+    <figcaption>Master Thesis presentation</figcaption>
    </figure>
 
       <figure class="presentation-item">
