--- a/about.html
+++ b/about.html
@@ -288,9 +288,8 @@ html lang="en">
 
 .associations-inner{
   max-width: 560px; /* igual ao texto acima */
-  width: 100%;
-    justify-content: flex-start;
-  text-align: center;
+  max-width: 920px; /* igual ao about */
+  margin: 0 auto;
 
 }
 
