--- a/about.html
+++ b/about.html
@@ -624,7 +624,7 @@ li a:hover .desc{
 
    <figure class="presentation-item">
     <img src="QECinemateca.jpeg" alt="Panel discussion at audiovisual archiving conference">
-    <figcaption> portuguese experimental artist program- Cinemateca Portuguesa 2025 </figcaption>
+    <figcaption> portuguese experimental cinema program- Cinemateca Portuguesa 2025 </figcaption>
    </figure>
 
    <figure class="presentation-item">
