--- a/about.html
+++ b/about.html
@@ -280,7 +280,7 @@ html lang="en">
 ======================= */
 
 .about-associations{
-  display: row;
+  display: grid;
   justify-content: flex-start;
   text-align: center;
   margin-top: 3rem;
