--- a/research-preservation.html
+++ b/research-preservation.html
@@ -209,6 +209,60 @@
   height: auto;
   display: block;
 }
+   /* ================= PROJECT LAYOUT2 ================= */
+
+    .project-layout2{
+      background: #0a0c11;
+      padding: 90px 22px 140px;
+    }
+
+ .project-wrapper2 {
+  display: flex;
+  gap: 20px;
+  align-items: flex-start;
+  flex-wrap: wrap; /* para mobile */
+}
+
+.project-text2 {
+
+  display: flex;
+  flex-direction: column;
+}
+.h1 {
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+
+.video-fixed {
+  flex: 1; /* mesma proporção do texto */
+  position: relative;
+  aspect-ratio: 16/9;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.video-fixed iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.project-image2 {
+  width: 100%;
+  margin-top: 40px;
+}
+
+.project-image img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
   </style>
 </head>
 
