--- a/about.html
+++ b/about.html
@@ -287,7 +287,8 @@ html lang="en">
 }
 
 .associations-inner{
-  max-width: 720px; /* igual ao about */
+
+  max-width: 560px; /* igual ao texto acima */
   margin: 0 auto;
 
 }
