--- a/about.html
+++ b/about.html
@@ -284,10 +284,11 @@ html lang="en">
   justify-content: flex-start;
   text-align: flex-start;
   margin-top: 3rem;
+  align-items: center;
 }
 
 .associations-inner{
-
+  max-width: 720px; /* igual ao about */
   max-width: 560px; /* igual ao texto acima */
   margin: 0 auto;
 
