--- a/about.html
+++ b/about.html
@@ -281,7 +281,7 @@ html lang="en">
 
 .about-associations{
   display: grid;
-  justify-content: flex-start;
+  justify-content: center;
   text-align: flex-start;
   margin-top: 3rem;
   align-items: center;
