--- a/about.html
+++ b/about.html
@@ -282,7 +282,7 @@ html lang="en">
 .about-associations{
   display: grid;
   justify-content: center;
-  text-align: flex-start;
+  text-align: start;
   margin-top: 3rem;
   align-items: center;
 }
