--- a/about.html
+++ b/about.html
@@ -280,16 +280,16 @@ html lang="en">
 ======================= */
 
 .about-associations{
-  display: grid;
+   display: flex;
   justify-content: center;
-  text-align: start;
   margin-top: 3rem;
-  align-items: center;
+  text-align: start;
 }
 
 .associations-inner{
   
   max-width: 920px; /* igual ao about */
+  width: 100%;
   margin: 0 auto;
 
 }
