--- a/about.html
+++ b/about.html
@@ -285,6 +285,7 @@ html lang="en">
   margin-top: 3rem;
   text-align: start;
   gap: 20px; 
+
 }
 
 .associations-inner{
@@ -292,7 +293,7 @@ html lang="en">
   max-width: 920px; /* igual ao about */
   width: 100%;
   margin: 0 auto;
-  margin-left: -10px;
+  gap: 10px;
 
 }
 
