--- a/about.html
+++ b/about.html
@@ -281,7 +281,7 @@ html lang="en">
 
 .about-associations{
    display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   margin-top: 3rem;
   text-align: start;
   gap: 50px; 
