--- a/about.html
+++ b/about.html
@@ -284,7 +284,8 @@ html lang="en">
   justify-content: flex-start;
   margin-top: 3rem;
   text-align: start;
-  gap: 50px; 
+  gap: 50px;
+  padding: -60px; 
 
 }
 
