--- a/about.html
+++ b/about.html
@@ -290,7 +290,7 @@ html lang="en">
   max-width: 920px; /* igual ao about */
   width: 100%;
   margin: 0 auto;
-
+padding-right: -30px;
 }
 
 .about-section-title{
