--- a/about.html
+++ b/about.html
@@ -280,8 +280,8 @@ html lang="en">
 ======================= */
 
 .about-associations{
- margin-top: 3rem;
-  text-align: center; 
+ padding: 80px 22px 140px;
+  background: #0a0c11;
 
 }
 
