--- a/about.html
+++ b/about.html
@@ -280,15 +280,17 @@ html lang="en">
 ======================= */
 
 .about-associations{
- padding: 80px 22px 140px;
-  background: #0a0c11;
+ margin-top: 3rem;
+  text-align: center; 
 
 }
 
 .associations-inner{
   
- max-width: 320px; /* igual ao about */
+  max-width: 920px; /* igual ao about */
+  width: 100%;
   margin: 0 auto;
+
 }
 
 .about-section-title{
