--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -155,38 +155,15 @@
     <div class="project-text">
       <div class="project-header">
         <h1>
-          Digital Restoration Short-Film La Cruz de Mayo
+          Étalonnage
           <span></span>
         </h1>
         <div class="project-meta">
-          <span>Digital Film Restoration | research project</span>
-          <span>16mm film | 22min</span>
-          <span class="year">1978</span>
+          <span>Analog Film color grading | Technique</span>
+          <span>16mm film |</span>
+          <span class="year">color Filters</span>
         </div>
-      </div>
-
-      <div class="project-block">
-        <p><strong>Director</strong><br>Miguel Secades y Miguel García</p>
-        <p><strong>País de producción</strong><br>Cuba</p>
-      </div>
-
-      <div class="project-block">
-        <p><strong> Archive Colletion</strong></p>
-        <p>
-          Archivistas Selvages Collective<br>
-          In colaboration With<br>
-          Elias Querjeta Zine Eskola (spain) <br>
-        </p>
-      </div>
-
-      <div class="project-block">
-        <p>
-          Production: Archivistas Selvages Collective<br>
-          Post producion Cordination: Lucia Malandro <br>
-          Digital Image Restoration: Mariana Torres<br>
-          Color grading: Mariana Torres & Lourenço Pinheiro<br>
-         Sound Restoration: Franco Bosco<br>
-        
+      </div> 
         </p>
       </div>
       <div class="project-block presentations">
@@ -198,7 +175,7 @@
       </div>
 
       <div class="project-block synopsis">
-        <p><strong>Sinopsis</strong></p>
+        <p><strong>Statment</strong></p>
         <p>
           <em>La Cruz de Mayo (1983) It is one significant recoveries
              in the context of Cuban amateur cinema, as it is a short 
@@ -216,12 +193,6 @@
         </p>
       </div>
     </div>
-
-    <!-- COLUNA VÍDEO -->
-    <div class="video-fixed">
-      <iframe src="https://vimeo.com/1084541446/b19ced0966?share=copy&fl=sv&fe=ci" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-    </div>
-  </div>
 
   <!-- IMAGEM ABAIXO -->
   <div class="project-image container">
