--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -151,6 +151,73 @@
   font-size: 2rem;
   cursor: pointer;
 }
+
+    .project-layout2{
+      background: #0a0c11;
+      padding: 90px 22px 140px;
+    }
+
+ .project-wrapper2 {
+  display: flex;
+  gap: 20px;
+  align-items: flex-start;
+  flex-wrap: wrap; /* para mobile */
+}
+
+.project-text2 {
+
+  display: flex;
+  flex-direction: column;
+}
+
+
+.project-image2 {
+  columns: 3;
+  column-gap: 0.5rem;
+}
+
+.project-image img,
+.project-image video {
+  width: 100%;
+  margin-bottom: 1.2rem;
+  break-inside: avoid;
+  filter: brightness(80%) contrast(115%);
+  display: block;
+  object-fit: cover;
+  cursor: pointer;
+}
+/* Overlay */
+.overlay {
+  display: none; /* escondido por padrão */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.overlay img,
+.overlay video {
+   max-width: 80vw;      /* nunca mais que 80% da largura do ecrã */
+  max-height: 80vh;     /* nunca mais que 80% da altura */
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  filter: brightness(80%) contrast(115%);
+}
+
+#close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+}
   </style>
 </head>
 
@@ -225,7 +292,62 @@
     <img src="tequenics/Captura de ecrã 2025-12-19 190630.png" alt="Projeto">
     <img src="tequenics/Captura de ecrã 2025-12-19 190652.png" alt="Projeto">
   </div>
-  
+
+  <section class="project-layout2">
+  <div class="project-wrapper container2">
+    <!-- COLUNA TEXTO -->
+    <div class="project-text2">
+      <div class="project-header2">
+        <h1>
+          Étalonnage
+          <span></span>
+        </h1>
+        <div class="project-meta2">
+          <span>Analog Film color grading | Technique</span>
+          <span>16mm film |</span>
+          <span class="year">color Filters</span>
+        </div>
+      </div> 
+        </p>
+      </div>
+      <div class="project-block presentations2">
+        <p><strong>Presentations</strong></p>
+        <p>
+          <em>Cineteca de Madrid -Matadero-2024<br>
+            Focus Short films dedicated to Cuban amateur cinema.</em>
+          </p>
+      </div>
+
+      <div class="project-block synopsis2">
+        <p><strong>Statment</strong></p>
+        <p>
+          <em>La Cruz de Mayo (1983) It is one significant recoveries
+             in the context of Cuban amateur cinema, as it is a short 
+             film about religious practices in a country politically 
+             assumed to be atheist, where any expression of religious
+              belief is censored.  
+              
+            the Archivistas Selvajes Collective has located and rescued
+            230 of the 546 films reported to them, originating from 17
+            creative cineclubs or independent collectives among the 84
+            registered with the National Federation of Cineclubs (FNCC)
+            before 1994. This work reflects a deep commitment to preserving 
+            cultural and historical records vital to Cuba’s identity, despite
+            the lack of institutional support.</em>
+        </p>
+      </div>
+    </div>
+
+  <!-- IMAGEM ABAIXO -->
+  <div class="project-image container">
+    <img src="tequenics/Captura de ecrã 2025-12-19 173055.png" alt="Projeto">
+    <img src="tequenics/Captura de ecrã 2025-12-19 173130.png" alt="Projeto">
+    <img src="tequenics/Captura de ecrã 2025-12-19 173156.png" alt="Projeto">
+    <img src="tequenics/Captura de ecrã 2025-12-19 173232.png" alt="Projeto">
+    <img src="tequenics/Captura de ecrã 2025-12-19 173750.png" alt="Projeto">
+    <img src="tequenics/Captura de ecrã 2025-12-19 190630.png" alt="Projeto">
+    <img src="tequenics/Captura de ecrã 2025-12-19 190652.png" alt="Projeto">
+  </div>
 <div id="overlay" class="overlay">
   <span id="close">&times;</span>
   <img id="overlay-img" src="" alt="">
