--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -299,13 +299,13 @@
     <div class="project-text2">
       <div class="project-header2">
         <h1>
-          Étalonnage
+          Colormaster
           <span></span>
         </h1>
         <div class="project-meta2">
-          <span>Analog Film color grading | Technique</span>
+          <span>Analog Film color grading | Technology</span>
           <span>16mm film |</span>
-          <span class="year">color Filters</span>
+          <span class="year">color analiser</span>
         </div>
       </div> 
         </p>
