--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -340,14 +340,15 @@
 
   <!-- IMAGEM ABAIXO -->
   <div class="project-image container">
-    <img src="tequenics/Captura de ecrã 2025-12-19 173055.png" alt="Projeto">
-    <img src="tequenics/Captura de ecrã 2025-12-19 173130.png" alt="Projeto">
-    <img src="tequenics/Captura de ecrã 2025-12-19 173156.png" alt="Projeto">
-    <img src="tequenics/Captura de ecrã 2025-12-19 173232.png" alt="Projeto">
-    <img src="tequenics/Captura de ecrã 2025-12-19 173750.png" alt="Projeto">
-    <img src="tequenics/Captura de ecrã 2025-12-19 190630.png" alt="Projeto">
+    <img src="techenics2/Captura de ecrã 2025-12-19 173253.png" alt="Projeto">
+    <img src="techenics2/Captura de ecrã 2025-12-19 173410.png" alt="Projeto">
+    <img src="techenics2/IMG_1921.jpg" alt="Projeto">
+    <img src="techenics2/IMG_1936.jpg" alt="Projeto">
+    <img src="techenics2/IMG_1938.jpg" alt="Projeto">
+    <img src="techenics2/IMG_1948.jpg" alt="Projeto">
     <img src="tequenics/Captura de ecrã 2025-12-19 190652.png" alt="Projeto">
   </div>
+  
 <div id="overlay" class="overlay">
   <span id="close">&times;</span>
   <img id="overlay-img" src="" alt="">
