--- a/index.html
+++ b/index.html
@@ -637,8 +637,8 @@
   </div>
 
  <div class="project-image container">
-  <a href="artistic-works.html">
-    <img src="Send me a color/Captura de ecrã 2025-12-19 173446.png" alt="Projeto">
+  <a href="photochemical-techniques.html">
+    <img src="tequenics/Captura de ecrã 2025-12-19 173055.png" alt="Projeto">
   </a>
 
   <a href="research-preservation.html">
@@ -650,7 +650,7 @@
   </a>
 
   <a href="portfolio.html">
-    <img src="Send me a color/Untitled_1.18.1.jpg" alt="Projeto">
+    <img src="tequenics/Captura de ecrã 2025-12-19 173232.png" alt="Projeto">
   </a>
 
   <a href="portfolio.html">
