--- a/index.html
+++ b/index.html
@@ -648,6 +648,9 @@
   <a href="portfolio.html">
     <img src="Send me a color/Untitled_1.2.2.jpg" alt="Projeto">
   </a>
+     <a href="portfolio.html">
+    <img src="Send me a color/Prueva de color.jpeg" alt="Projeto">
+  </a>
 
   <a href="portfolio.html">
     <img src="tequenics/Captura de ecrã 2025-12-19 173232.png" alt="Projeto">
@@ -660,6 +663,8 @@
   <a href="portfolio.html">
     <img src="Send me a color/Prueva de color.jpeg" alt="Projeto">
   </a>
+
+
 
 </section>
   </main>
