--- a/artistic-works.html
+++ b/artistic-works.html
@@ -387,7 +387,7 @@
     <img src="Send me a color/Untitled_1.2.2.jpg" alt="Projeto">
     <img src="Send me a color/Untitled_1.18.1.jpg" alt="Projeto">
     <video src="Send me a color/Untitled_1.18.1.mp4" muted loop></video>
-     <img src="Send me a color/Prueva de color.jpeg" alt="Projeto">
+     <img src="Send me a color/WhatsApp Image 2025-05-14 at 23.18.00 (2).jpeg" alt="Projeto">
   </div>
 
   <div id="overlay" class="overlay">
