--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -348,7 +348,59 @@
     <img src="techenics2/IMG_1948.jpg" alt="Projeto">
     <img src="tequenics/Captura de ecrã 2025-12-19 190652.png" alt="Projeto">
   </div>
-  
+
+    <section class="project-layout3">
+  <div class="project-wrapper container3">
+    <!-- COLUNA TEXTO -->
+    <div class="project-text3">
+      <div class="project-header3">
+        <h1>
+          Contact Printers
+          <span></span>
+        </h1>
+        <div class="project-meta3">
+          <span>film to film | Printers Technology</span>
+          <span>16mm film |</span>
+          <span class="year">BHC and TCI Debrie</span>
+        </div>
+      </div> 
+        </p>
+      </div>
+      <div class="project-block presentations3">
+        <p><strong>Presentations</strong></p>
+        <p>
+          <em>Cineteca de Madrid -Matadero-2024<br>
+            Focus Short films dedicated to Cuban amateur cinema.</em>
+          </p>
+      </div>
+
+      <div class="project-block synopsis3">
+        <p><strong>Statment</strong></p>
+        <p>
+          <em>La Cruz de Mayo (1983) It is one significant recoveries
+             in the context of Cuban amateur cinema, as it is a short 
+             film about religious practices in a country politically 
+             assumed to be atheist, where any expression of religious
+              belief is censored.  
+              
+            the Archivistas Selvajes Collective has located and rescued
+            230 of the 546 films reported to them, originating from 17
+            creative cineclubs or independent collectives among the 84
+            registered with the National Federation of Cineclubs (FNCC)
+            before 1994. This work reflects a deep commitment to preserving 
+            cultural and historical records vital to Cuba’s identity, despite
+            the lack of institutional support.</em>
+        </p>
+      </div>
+    </div>
+
+  <!-- IMAGEM ABAIXO -->
+  <div class="project-image container">
+    <img src="technics3/Captura de ecrã 2025-12-19 173341.png" alt="Projeto">
+    <img src="technics3/Captura de ecrã 2025-05-14 232648.png" alt="Projeto">
+
+  </div>
+
 <div id="overlay" class="overlay">
   <span id="close">&times;</span>
   <img id="overlay-img" src="" alt="">
