--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -265,19 +265,12 @@
       <div class="project-block synopsis">
         <p><strong>Statment</strong></p>
         <p>
-          <em>La Cruz de Mayo (1983) It is one significant recoveries
-             in the context of Cuban amateur cinema, as it is a short 
-             film about religious practices in a country politically 
-             assumed to be atheist, where any expression of religious
-              belief is censored.  
-              
-            the Archivistas Selvajes Collective has located and rescued
-            230 of the 546 films reported to them, originating from 17
-            creative cineclubs or independent collectives among the 84
-            registered with the National Federation of Cineclubs (FNCC)
-            before 1994. This work reflects a deep commitment to preserving 
-            cultural and historical records vital to Cuba’s identity, despite
-            the lack of institutional support.</em>
+          <em>Color balance and tonal control of light, <br>
+         By adjusting filtration, exposure, and contrast, to a deeper<br>
+          understanding of color correction, chromatic relationships, and precise control over the final photographic image.<br>
+          befour preting, analising color points equivelent to printing lights on film machinary.<br>
+
+          </em>
         </p>
       </div>
     </div>
@@ -377,19 +370,8 @@
       <div class="project-block synopsis3">
         <p><strong>Statment</strong></p>
         <p>
-          <em>La Cruz de Mayo (1983) It is one significant recoveries
-             in the context of Cuban amateur cinema, as it is a short 
-             film about religious practices in a country politically 
-             assumed to be atheist, where any expression of religious
-              belief is censored.  
-              
-            the Archivistas Selvajes Collective has located and rescued
-            230 of the 546 films reported to them, originating from 17
-            creative cineclubs or independent collectives among the 84
-            registered with the National Federation of Cineclubs (FNCC)
-            before 1994. This work reflects a deep commitment to preserving 
-            cultural and historical records vital to Cuba’s identity, despite
-            the lack of institutional support.</em>
+          <em>Through contact printing, I developed a direct and hands-on approach<br> 
+            to image reproduction, emphasizing precision, material awareness, and the relationship between negative and final print.</em>
         </p>
       </div>
     </div>
