--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -380,6 +380,8 @@
   <div class="project-image container">
     <img src="technics3/Captura de ecrã 2025-12-19 173341.png" alt="Projeto">
     <img src="technics3/Captura de ecrã 2025-05-14 232648.png" alt="Projeto">
+      <img src="technics3/Captura de ecrã 2025-12-27 170449.png" alt="Projeto">
+        <img src="technics3/Captura de ecrã 2025-12-27 170219.png" alt="Projeto">
 
   </div>
 
