--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -314,19 +314,8 @@
       <div class="project-block synopsis2">
         <p><strong>Statment</strong></p>
         <p>
-          <em>La Cruz de Mayo (1983) It is one significant recoveries
-             in the context of Cuban amateur cinema, as it is a short 
-             film about religious practices in a country politically 
-             assumed to be atheist, where any expression of religious
-              belief is censored.  
-              
-            the Archivistas Selvajes Collective has located and rescued
-            230 of the 546 films reported to them, originating from 17
-            creative cineclubs or independent collectives among the 84
-            registered with the National Federation of Cineclubs (FNCC)
-            before 1994. This work reflects a deep commitment to preserving 
-            cultural and historical records vital to Cuba’s identity, despite
-            the lack of institutional support.</em>
+          <em>color balance and tonal control through analog filtration, enhancing <br>
+            my understanding of light, contrast, and chromatic correction in photographic processes.</em>
         </p>
       </div>
     </div>
@@ -342,24 +331,23 @@
     <img src="tequenics/Captura de ecrã 2025-12-19 190652.png" alt="Projeto">
   </div>
 
-    <section class="project-layout3">
+    <section class="project-layout4">
   <div class="project-wrapper container3">
     <!-- COLUNA TEXTO -->
-    <div class="project-text3">
+    <div class="project-text4">
       <div class="project-header3">
         <h1>
-          Contact Printers
+          The Projection
           <span></span>
         </h1>
-        <div class="project-meta3">
-          <span>film to film | Printers Technology</span>
-          <span>16mm film |</span>
-          <span class="year">BHC and TCI Debrie</span>
+        <div class="project-meta4">
+          <span>film to film | film reproduction Technology</span>
+          <span>16mm film |S8 |35mm Film </span>
         </div>
       </div> 
         </p>
       </div>
-      <div class="project-block presentations3">
+      <div class="project-block presentations4">
         <p><strong>Presentations</strong></p>
         <p>
           <em>Cineteca de Madrid -Matadero-2024<br>
@@ -367,11 +355,55 @@
           </p>
       </div>
 
-      <div class="project-block synopsis3">
+      <div class="project-block synopsis4">
         <p><strong>Statment</strong></p>
         <p>
           <em>Through contact printing, I developed a direct and hands-on approach<br> 
-            to image reproduction, emphasizing precision, material awareness, and the relationship between negative and final print.</em>
+            to image reproduction, emphasizing precision, material awareness, and the relationship on duplication systems, between negative and final print.</em>
+        </p>
+      </div>
+    </div>
+
+  <!-- IMAGEM ABAIXO -->
+  <div class="project-image container">
+    <img src="technics3/Captura de ecrã 2025-12-19 173341.png" alt="Projeto">
+    <img src="technics3/Captura de ecrã 2025-05-14 232648.png" alt="Projeto">
+      <img src="technics3/Captura de ecrã 2025-12-27 170449.png" alt="Projeto">
+        <img src="technics3/Captura de ecrã 2025-12-27 170219.png" alt="Projeto">
+  </div>
+  <section class="project-layout4">
+  <div class="project-wrapper container3">
+    <!-- COLUNA TEXTO -->
+    <div class="project-text3">
+      <div class="project-header4">
+        <h1>
+          Contact Printers
+          <span></span>
+        </h1>
+        <div class="project-meta4">
+          <span>film to film | Printers Technology</span>
+          <span>16mm film |</span>
+          <span class="year">BHC and TCI Debrie</span>
+        </div>
+      </div> 
+        </p>
+      </div>
+      <div class="project-block presentations4">
+        <p><strong>Presentations</strong></p>
+        <p>
+          <em>Cineteca de Madrid -Matadero-2024<br>
+            Focus Short films dedicated to Cuban amateur cinema.</em>
+          </p>
+      </div>
+
+      <div class="project-block synopsis4">
+        <p><strong>Statment</strong></p>
+        <p>
+          <em>the earliest experiments in moving images, when the act of recording<br>
+             and projecting were inseparable. It celebrates the intimate relationship <br>
+             between light, mechanics, and gesture, emphasizing the performative and material presence of the image.<br>
+              By revisiting this duality, the work invites the viewer to experience cinema as a tangible, <br>
+              temporal event, where the projectionist becomes both creator and mediator of light and memory.</em>
         </p>
       </div>
     </div>
@@ -384,6 +416,8 @@
         <img src="technics3/Captura de ecrã 2025-12-27 170219.png" alt="Projeto">
 
   </div>
+
+
 
 <div id="overlay" class="overlay">
   <span id="close">&times;</span>
