--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
   </a>
 
   <a href="portfolio.html">
-    <img src="Send me a color/Prueva de color.jpeg" alt="Projeto">
+    <img src="Send me a color/WhatsApp Image 2025-05-14 at 23.18.00 (2).jpeg" alt="Projeto">
   </a>
 
 
