--- a/about.html
+++ b/about.html
@@ -281,8 +281,8 @@ html lang="en">
 
 .about-associations{
  margin-top: 3rem;
-  text-align: center; 
-
+  position: relative;
+  left: 100px; /* move 100px para a direita */
 }
 
 .associations-inner{
