--- a/about.html
+++ b/about.html
@@ -310,13 +310,13 @@ html lang="en">
   padding: 0;
   margin: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 1.5rem;
 }
 
 .associations-list li{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: .35rem;
 }
 
