--- a/about.html
+++ b/about.html
@@ -310,7 +310,7 @@ html lang="en">
   padding: 0;
   margin: 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 1.5rem;
 }
 
