--- a/about.html
+++ b/about.html
@@ -317,7 +317,7 @@ html lang="en">
 .associations-list li{
   display: flex;
   flex-direction: row;
-  gap: .35rem;
+  gap: 1rem;
 }
 
 .assoc-name{
