--- a/about.html
+++ b/about.html
@@ -315,7 +315,7 @@ html lang="en">
 }
 
 .associations-list li{
-  display: flex;
+  display: flex-start;
   flex-direction: row;
   gap: 1.5rem;
 }
