--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -274,6 +274,12 @@
         </p>
       </div>
     </div>
+    <section class="manual-section">
+  <h2>Manual de Uso da Máquina</h2>
+  <a href="https://drive.google.com/your-pdf-link" target="_blank">
+    <img src="primeira-pagina.pdf.png" alt="Primeira página do manual" class="manual-img">
+  </a>
+</section>
 
   <!-- IMAGEM ABAIXO -->
   <div class="project-image container">
@@ -319,6 +325,12 @@
         </p>
       </div>
     </div>
+    <section class="manual-section">
+  <h2>Manual de Uso da Máquina</h2>
+  <a href="https://drive.google.com/your-pdf-link" target="_blank">
+    <img src="primeira-pagina.pdf.png" alt="Primeira página do manual" class="manual-img">
+  </a>
+</section>
 
   <!-- IMAGEM ABAIXO -->
   <div class="project-image container">
@@ -337,7 +349,7 @@
     <div class="project-text4">
       <div class="project-header3">
         <h1>
-          The Projection
+          Contact Printing
           <span></span>
         </h1>
         <div class="project-meta4">
@@ -363,6 +375,12 @@
         </p>
       </div>
     </div>
+    <section class="manual-section">
+  <h2>Manual de Uso da Máquina</h2>
+  <a href="https://drive.google.com/your-pdf-link" target="_blank">
+    <img src="primeira-pagina.pdf.png" alt="Primeira página do manual" class="manual-img">
+  </a>
+</section>
 
   <!-- IMAGEM ABAIXO -->
   <div class="project-image container">
@@ -377,7 +395,7 @@
     <div class="project-text3">
       <div class="project-header4">
         <h1>
-          Contact Printers
+          The Projection
           <span></span>
         </h1>
         <div class="project-meta4">
@@ -407,6 +425,12 @@
         </p>
       </div>
     </div>
+    <section class="manual-section">
+  <h2>Manual de Uso da Máquina</h2>
+  <a href="https://drive.google.com/your-pdf-link" target="_blank">
+    <img src="primeira-pagina.pdf.png" alt="Primeira página do manual" class="manual-img">
+  </a>
+</section>
 
   <!-- IMAGEM ABAIXO -->
   <div class="project-image container">
