--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -102,6 +102,40 @@
   display: flex;
   flex-direction: column;
 }
+.manual-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3rem 1rem;
+  background-color: #f9f9f9; /* leve fundo */
+  text-align: center;
+}
+
+.manual-section h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  color: #333;
+}
+
+.manual-section a {
+  display: block;
+  text-decoration: none;
+  transition: transform 0.3s ease;
+}
+
+.manual-section a:hover {
+  transform: scale(1.05); /* efeito de zoom ao passar o mouse */
+}
+
+.manual-img {
+  width: 210mm; /* equivalente A4 em largura */
+  max-width: 100%;
+  height: auto;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
 
 
 .project-image {
