--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -107,7 +107,7 @@
   flex-direction: column;
   align-items: center;
   padding: 3rem 1rem;
-  background-color: #f9f9f9; /* leve fundo */
+  background-color: #0a0c11; /* leve fundo */
   text-align: center;
 }
 
@@ -132,7 +132,7 @@
   max-width: 100%;
   height: auto;
   box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-  border: 1px solid #ccc;
+  border: 1px solid #0a0c11;
   border-radius: 8px;
 }
 
@@ -309,7 +309,7 @@
       </div>
     </div>
     <section class="manual-section">
-  <h2>Manual de Uso da Máquina</h2>
+  <h2>Lab Notes on color corretion</h2>
   <a href="https://drive.google.com/your-pdf-link" target="_blank">
     <img src="primeira-pagina.pdf.png" alt="Primeira página do manual" class="manual-img">
   </a>
