--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -321,7 +321,7 @@
 
   <a href="https://drive.google.com/your-pdf-link" target="_blank">
     <img
-      src="primeira-pagina.pdf.png"
+      src="documentationLAB/1_page-0001.jpg"
       alt="Primeira página do manual"
       class="manual-img"
     >
