--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -322,6 +322,7 @@
   <a href="https://drive.google.com/your-pdf-link" target="_blank">
     <img
       src="documentationLAB/1_page-0001.jpg"
+      src="documentationLAB/apuntes lab.png"
       alt="Primeira página do manual"
       class="manual-img"
     >
